Allow detection of Youtube and Vimeo video with url omitting "http"